# Awaqi

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  middleware.ts  package-lock.json  package.json  presentation.md  pyproject.toml  tailwind.config.ts  test_ingest.py
.github/workflows/: ci.yml
app/: globals.css
app/[locale]/: layout.tsx  page.tsx
app/[locale]/dashboard/: layout.tsx  page.tsx
app/[locale]/dashboard/settings/: page.tsx
app/[locale]/login/: page.tsx
apps/ai-engine/: README.md  pyproject.toml
apps/ai-engine/src/ai_engine/: __init__.py
apps/api/: README.md  deps.py  deps_rate_limit.py  main.py  pyproject.toml  schemas.py
apps/api/routers/: admin.py  chat.py
apps/scraper/: README.md  pyproject.toml  test_lock_safety.py  test_scraper.py
apps/scraper/src/scraper/: __init__.py  __main__.py  config.py  crawler.py  main.py  processor.py  store.py
apps/telegram-bot/: README.md  pyproject.toml
apps/telegram-bot/src/telegram_bot/: __init__.py
apps/web/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css
apps/web/app/[locale]/: page.tsx
apps/web/app/[locale]/(admin)/: layout.tsx
apps/web/app/[locale]/(admin)/admin/: page.tsx
apps/web/app/[locale]/(admin)/admin/knowledge-base/: page.tsx
apps/web/app/[locale]/(admin)/admin/scraper/: page.tsx
apps/web/app/[locale]/(admin)/admin/settings/: page.tsx
apps/web/app/[locale]/(admin)/admin/settings/logs/: page.tsx
apps/web/app/[locale]/(admin)/admin/users/: page.tsx
apps/web/app/[locale]/admin/login/: page.tsx
apps/web/app/[locale]/chat/: page.tsx
apps/web/app/[locale]/chat/history/: page.tsx
apps/web/app/[locale]/chat/login/: page.tsx
apps/web/app/[locale]/chat/signup/: page.tsx
apps/web/app/[locale]/signup/: page.tsx
apps/web/components/admin/: Header.tsx  OverviewChart.tsx  Sidebar.tsx
apps/web/components/auth/: AdminLoginForm.tsx  CustomerLoginForm.tsx  CustomerSignUpForm.tsx  LoginForm.tsx
apps/web/components/chat/: ChatInput.tsx  ChatInterface.tsx  MessageList.tsx
apps/web/components/landing/: BentoGrid.tsx  BottomCTA.tsx  CTA.tsx  FAQ.tsx  FeatureShowcase.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logos.tsx  Navbar.tsx  Testimonials.tsx
apps/web/components/layout/: ClientLayout.tsx  Header.tsx  Sidebar.tsx  ThemeToggle.tsx
apps/web/components/settings/: ProfileForm.tsx
apps/web/components/ui/: data-table.tsx
apps/web/contexts/: SidebarContext.tsx
apps/web/i18n/: request.ts
apps/web/lib/: api.ts  auth-client.ts  auth-secret.ts  auth.ts  chat-session.ts  customer-auth-client.ts  customer-auth.ts
apps/web/messages/: am.json  en.json
apps/web/types/: api.ts
components/auth/: LoginForm.tsx
components/chat/: ChatInput.tsx  MessageList.tsx  types.ts
components/landing/: Features.tsx  Navbar.tsx
components/layout/: ClientLayout.tsx  Header.tsx
contexts/: ThemeContext.tsx
docker/: api.Dockerfile  bot.Dockerfile  docker-compose.yml  scraper.Dockerfile  web.Dockerfile
tests/: conftest.py
tests/api/: test_admin_endpoints.py  test_chat_endpoints.py  test_health.py  test_schemas.py  test_session_token.py
