[project]
name = "awaqi-monorepo"
version = "0.1.0"
description = "Awaqi Monorepo"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/scraper",
    "apps/telegram-bot",
    "packages/ai-engine",
    "packages/database",
    "packages/nlu",
    "packages/utils"
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # ignore line-too-long (handled by formatter)
