[project]
name = "awaqi-monorepo"
version = "0.1.0"
description = "Awaqi Monorepo"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/telegram-bot",
    "packages/ai-engine",
    "packages/database",
    "packages/nlu",
    "packages/utils"
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # ignore line-too-long (handled by formatter)
