[project]
name = "api"
version = "0.1.0"
description = "Web Backend Gateway for Awaqi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
    "ai-engine",
    "database",
    "nlu"
]

[tool.uv.sources]
ai-engine = { workspace = true }
database = { workspace = true }
nlu = { workspace = true }
