[project]
name = "scraper"
version = "0.1.0"
description = "Web scraper service for Awaqi — mor.gov.et PDF ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "pdfplumber",
    "apscheduler>=3.10,<4",
    "database",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.uv.sources]
database = { workspace = true }
utils = { workspace = true }

[dependency-groups]
dev = []
