[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot service for Awaqi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot",
    "requests",
    "ai-engine",
    "database",
    "nlu"
]

[tool.uv.sources]
ai-engine = { path = "../../packages/ai-engine", editable = true }
database = { path = "../../packages/database", editable = true }
nlu = { path = "../../packages/nlu", editable = true }
