[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot service for Awaqi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot",
    "requests",
    "ai-engine",
    "database",
    "nlu"
]

[tool.uv.sources]
ai-engine = { workspace = true }
database = { workspace = true }
nlu = { workspace = true }
